# quantinuum-schemas

./: .cz.toml  .gitignore  CHANGELOG.md  Makefile  README.md  devenv.nix  mypy.ini  pylintrc  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
quantinuum_schemas/: __init__.py  aer.py  backend.py  exceptions.py  models.py  qulacs.py  typing_utils.py
quantinuum_schemas/models/: aer_noise.py  backend_config.py  backend_info.py
templates/: CHANGELOG.md.j2
tests/: test_backend.py  test_compile.py
tests/models/: test_backend_config.py  test_backend_info.py  test_hypertket_config.py
